<resources
  xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="MissingTranslation">
    <string name="about_feedback">Feedback:</string>
    <string name="about_homepage">Homepage:</string>
    <string name="AboutText">KeePassDroid is an Android implementation of the KeePass password manager.</string>
    <string name="about_twitter">Twitter:</string>
    <string name="accept">Accept</string>
    <string name="add_entry">Add entry</string>
    <string name="add_group">Add group</string>
    <string name="add_group_title">Add Group</string>
    <string name="add_string">Add string</string>
    <string name="algorithm">Algorithm</string>
    <string name="Android11FileNotFound">The file was not found. Google recently started enforcing restrictions on file access to internal storage in Android 11 and later. This causes many of the old file URLs to fail. Try going back to the first screen in the app and using the open button to access the file through the Android file selection dialog.</string>
    <string name="Android11SaveFailed">The file could not be saved. Google recently started enforcing restrictions on file access to internal storage in Android 11 and later. This causes many of the old file URLs to fail. Try going back to the first screen in the app and using the open button to access the file through the Android file selection dialog.</string>
    <string name="app_name">KeePassDroid</string>
    <string name="app_timeout">Application timeout</string>
    <string name="app_timeout_summary">Time before locking database when the application is inactive.</string>
    <string name="application">Application</string>
    <string name="application_settings">Application settings</string>
    <string name="beta_dontask">Don\'t show again</string>
    <string name="biometric_auto_open">Automatically prompt for biometric login when opening file.</string>
    <string name="biometric_auto_open_title">Automatic biometric Login</string>
    <string name="biometric_auth_failed">Failed to authenticate biometric</string>
    <string name="biometric_auth_failed_store">Failed to authenticate, password was not stored</string>
    <string name="biometric_auth_error">Authentication error</string>
    <string name="biometric_auth_to_open">Authenticate to open database</string>
    <string name="biometric_auth_to_store">Authenticate to store password</string>
    <string name="biometric_clear_stored_password">Clear Stored Password</string>
    <string name="biometric_error">Biometric error</string>
    <string name="biometric_invalidated">Biometric invalidated</string>
    <string name="biometric_open_db">Open Database</string>
    <string name="biometric_save_password">Save Password</string>
    <string name="brackets">Brackets</string>
    <string name="browser_intall_text">File browsing requires the Open Intents File Manager, click below to install it. Due to some quirks in the file manager, browsing may not work correctly, the first time you browse.</string>
    <string name="cancel">Cancel</string>
    <string name="ClearClipboard">Clipboard cleared.</string>
    <string name="clipboard_error_title">Clipboard error</string>
    <string name="clipboard_error">Some Samsung Android phones have a bug in the clipboard implementation that causes copying from applications to fail. For more details go to:</string>
    <string name="clipboard_error_clear">Clearing the clipboard failed</string>
    <string name="clipboard_timeout">Clipboard timeout</string>
    <string name="clipboard_timeout_summary">Time before clearing clipboard after copying username or password</string>
    <string name="copy_username">Select to copy username to clipboard</string>
    <string name="copy_password">Select to copy password to clipboard</string>
    <string name="username_copied">Username copied to clipboard</string>
    <string name="password_copied">Password copied to clipboard</string>
    <string name="creating_db_key">Creating database key&#8230;</string>
    <string name="database">Database</string>
    <string name="decrypting_db">Decrypting database contents&#8230;</string>
    <string name="default_checkbox">Use this as my default database</string>
    <string name="digits">Digits</string>
    <string name="disclaimer_formal">KeePassDroid Copyright 2009&#8211;2025 Brian Pellin comes with ABSOLUTELY NO WARRANTY; This is free software, and you are welcome to redistribute it under the conditions of the GPL version 2 or later.</string>
    <string name="ellipsis">\u2026</string>
    <string name="enter_filename">Enter database filename:</string>
    <string name="entry_accessed">Accessed: </string>
    <string name="entry_and_or">Enter a password and/or a key file to unlock your database:</string>
    <string name="entry_cancel">Cancel</string>
    <string name="entry_comment">Comments: </string>
    <string name="entry_confpassword">Confirm password:</string>
    <string name="entry_created">Created: </string>
    <string name="entry_expires">Expires: </string>
    <string name="entry_keyfile">Key file (optional)</string>
    <string name="entry_modified">Modified: </string>
    <string name="entry_not_found">Entry data not found.</string>
    <string name="entry_password">Password:</string>
    <string name="entry_save">Save</string>
    <string name="entry_title">Name: </string>
    <string name="entry_url">URL: </string>
    <string name="entry_user_name">User Name: </string>
    <string name="error_arc4">The ArcFour stream cipher is not supported.</string>
    <string name="error_can_not_handle_uri">KeePassDroid cannot handle this uri.</string>
    <string name="error_could_not_create_parent">Could not create parent directory.</string>
    <string name="error_database_exists">This file already exists.</string>
    <string name="error_failed_to_launch_link">Failed to launch link.</string>
    <string name="error_filename_required">A filename is required.</string>
    <string name="error_file_not_create">Could not create file:</string>
    <string name="error_invalid_db">Invalid database.</string>
    <string name="error_invalid_path">Invalid path.</string>
    <string name="error_no_name">A name is required.</string>
    <string name="error_nopass">A password or a keyfile is required.</string>
    <string name="error_out_of_memory">The phone ran out of memory while parsing your database. It may be too large for your phone.</string>
    <string name="error_pass_gen_type">At least one password generation type must be selected</string>
    <string name="error_pass_match">Passwords do not match.</string>
    <string name="error_rounds_not_number">Rounds must be a number.</string>
    <string name="error_rounds_too_large">Rounds too big.  Setting to 2147483648.</string>
    <string name="error_string_key">A field name is required for each string.</string>
    <string name="error_title_required">A title is required.</string>
    <string name="error_wrong_length">Enter a positive integer on length field</string>
    <string name="field_name">Field Name</string>
    <string name="field_value">Field value</string>
    <string name="FileNotFound">File not found.</string>
    <string name="file_not_found_content">File not found. Try reopening from your content provider.</string>
    <string name="file_browser">File Browser</string>
    <string name="generate_password">Generate Password</string>
    <string name="group">Group</string>
    <string name="hint_comment">comment</string>
    <string name="hint_conf_pass">confirm password</string>
    <string name="hint_generated_password">generated password</string>
    <string name="hint_group_name">Group name</string>
    <string name="hint_keyfile">key file</string>
    <string name="hint_length">length</string>
    <string name="hint_pass">password</string>
    <string name="hint_login_pass">Password</string>
    <string name="hint_title">name</string>
    <string name="hint_url">url</string>
    <string name="hint_username">username</string>
    <string name="install_from_market">Install from Play Store</string>
    <string name="install_from_website">Install from Web</string>
    <string name="InvalidPassword">Invalid password or key file.</string>
    <string name="invalid_algorithm">Invalid algorithm.</string>
    <string name="invalid_db_sig">Database format not recognized.</string>
    <string name="keyfile_does_not_exist">Key file does not exist.</string>
    <string name="keyfile_is_empty">Key file is empty.</string>
    <string name="length">Length</string>
    <string name="list_size_title">Group list size</string>
    <string name="list_size_summary">Text size in the group list</string>
    <string name="loading_database">Loading database&#8230;</string>
    <string name="lowercase">Lower-case</string>
    <string name="maskpass_title">Mask password</string>
    <string name="maskpass_summary">Hide passwords by default</string>
    <string name="menu_about">About</string>
    <string name="menu_change_key">Change master key</string>
    <string name="menu_copy_pass">Copy Password</string>
    <string name="menu_copy_user">Copy User</string>
    <string name="menu_create">Create</string>
    <string name="menu_app_settings">Settings</string>
    <string name="menu_db_settings">Database settings</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_hide_password">Hide Pass</string>
    <string name="menu_lock">Lock Database</string>
    <string name="menu_open">Open</string>
    <string name="menu_patreon">Patreon</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_search">Search</string>
    <string name="menu_showpass">Show pass</string>
    <string name="menu_support_developer">Support the developer</string>
    <string name="menu_url">Go to URL</string>
    <string name="minus">Minus</string>
    <string name="never">Never</string>
    <string name="no_results">No search results</string>
    <string name="no_url_handler">No handler for this url.</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_text">If notification permission is granted, KeePassDroid will add notifications when an entry is open. When clicked on, the username or password will be copied to the clipboard.</string>
    <string name="open_or_create">Open or create a database:</string>
    <string name="open_recent">Open recent database (click to open):</string>
    <string name="omitbackup_title">Don\'t search backup entries</string>
    <string name="omitbackup_summary">Omit \'Backup\' group from search results (applies to .kdb only)</string>
    <string name="pass_filename">KeePass database filename:</string>
    <string name="password_title">Enter database password</string>
    <string name="progress_create">Creating new database&#8230;</string>
    <string name="progress_title">Working&#8230;</string>
    <string name="protection">Protection</string>
    <string name="read_only">Read-only</string>
    <string name="otp_seed">Secret / otpauth URI:</string>
    <string name="otp_seed_hint">Paste or scan a secret</string>
    <string name="otp_paste">Paste</string>
    <string name="otp_scan">Scan QR code</string>
    <string name="otp_image">Clipboard image</string>
    <string name="otp_type">Type</string>
    <string name="otp_hash">Algorithm</string>
    <string name="otp_encoding">Encoding</string>
    <string name="otp_digits">Digits</string>
    <string name="otp_period">Period (seconds)</string>
    <string name="otp_counter">Counter</string>
    <string name="otp_pin">Yandex PIN</string>
    <string name="otp_issuer">Issuer</string>
    <string name="otp_label">Label</string>
    <string name="otp_invalid">Invalid OTP secret</string>
    <string name="otp_remove">Remove</string>
</resources>